feat: controller e documentação da rota de cadastro de médicos
